feat: new game layout setup, various improvements
