# src/lib/catan-api-docs.json
@@ -97,6 +97,34 @@
       }
     },
     "/game": {
+      "get": {
+        "tags": ["game-controller"],
+        "operationId": "search_1",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Zero-based page index (0..N)",
+            "required": false,
+            "schema": { "minimum": 0, "type": "integer", "default": 0 }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "description": "The size of the page to be returned",
+            "required": false,
+            "schema": { "minimum": 1, "type": "integer", "default": 5 }
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "description": "Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.",
+            "required": false,
+            "schema": { "type": "array", "items": { "type": "string" }, "default": ["startTimestamp,DESC"] }
+          }
+        ],
+        "responses": { "200": { "description": "OK", "content": { "*/*": { "schema": { "$ref": "#/components/schemas/PageGameDTO" } } } } }
+      },
       "post": {
         "tags": ["game-controller"],
         "operationId": "createNewGame",
@@ -127,6 +155,7 @@
         }
       }
     },
+    "/server-status": { "get": { "tags": ["server-status"], "operationId": "status", "responses": { "200": { "description": "OK" } } } },
     "/game/{id}/score": {
       "get": {
         "tags": ["game-controller"],
@@ -156,6 +185,7 @@
       "PlayerDTO": {
         "type": "object",
         "properties": {
+          "id": { "type": "integer", "format": "int64" },
           "username": { "type": "string" },
           "email": { "type": "string" },
           "avatarUrl": { "type": "string" },
@@ -175,10 +205,9 @@
         }
       },
       "GameDTO": {
-        "required": ["id", "startTimestamp"],
         "type": "object",
         "properties": {
-          "id": { "type": "integer", "format": "int32" },
+          "id": { "type": "integer", "format": "int64" },
           "startTimestamp": { "type": "string", "format": "date-time" },
           "endTimestamp": { "type": "string", "format": "date-time" },
           "playerScores": { "type": "array", "items": { "$ref": "#/components/schemas/PlayerScore" } }
@@ -210,8 +239,8 @@
       "PagePlayerDTO": {
         "type": "object",
         "properties": {
-          "totalPages": { "type": "integer", "format": "int32" },
           "totalElements": { "type": "integer", "format": "int64" },
+          "totalPages": { "type": "integer", "format": "int32" },
           "size": { "type": "integer", "format": "int32" },
           "content": { "type": "array", "items": { "$ref": "#/components/schemas/PlayerDTO" } },
           "number": { "type": "integer", "format": "int32" },
@@ -228,10 +257,10 @@
         "properties": {
           "offset": { "type": "integer", "format": "int64" },
           "sort": { "type": "array", "items": { "$ref": "#/components/schemas/SortObject" } },
+          "unpaged": { "type": "boolean" },
           "paged": { "type": "boolean" },
-          "pageNumber": { "type": "integer", "format": "int32" },
           "pageSize": { "type": "integer", "format": "int32" },
-          "unpaged": { "type": "boolean" }
+          "pageNumber": { "type": "integer", "format": "int32" }
         }
       },
       "SortObject": {
@@ -242,6 +271,22 @@
           "ascending": { "type": "boolean" },
           "property": { "type": "string" },
           "ignoreCase": { "type": "boolean" }
+        }
+      },
+      "PageGameDTO": {
+        "type": "object",
+        "properties": {
+          "totalElements": { "type": "integer", "format": "int64" },
+          "totalPages": { "type": "integer", "format": "int32" },
+          "size": { "type": "integer", "format": "int32" },
+          "content": { "type": "array", "items": { "$ref": "#/components/schemas/GameDTO" } },
+          "number": { "type": "integer", "format": "int32" },
+          "sort": { "type": "array", "items": { "$ref": "#/components/schemas/SortObject" } },
+          "first": { "type": "boolean" },
+          "last": { "type": "boolean" },
+          "numberOfElements": { "type": "integer", "format": "int32" },
+          "pageable": { "$ref": "#/components/schemas/PageableObject" },
+          "empty": { "type": "boolean" }
         }
       }
     }
